Merge remote-tracking branch 'origin/master' into upgrade
# Conflicts:
#	pom.xml
#	src/main/java/net/hurstfrost/hudson/sounds/HudsonSoundsNotifier.java
#	src/main/java/net/hurstfrost/hudson/sounds/SoundsAgentAction.java
#	src/main/java/net/hurstfrost/hudson/sounds/SoundsBuildTask.java